--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "https": "^1.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
     "stubby": "^5.1.0",
     "url": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "stubs-dev": "stubs start-dev",
+    "start": "node server.js",
+    "local": "cross-env NODE_ENV=localhost npm-run-all start stubs",
+    "dev": "cross-env NODE_ENV=develop npm-run-all start stubs",
+    "test": "cross-env NODE_ENV=testing npm-run-all -p start stubs",
+    "prod": "cross-env NODE_ENV=prod npm-run-all start stubs",
     "stubs": "stubby -w -s 8887 -t 7447 -a 8892 -d stubs/stubs-config.yaml"
   },
   "keywords": [],
